A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5671] fixed error when save configuration in administration->general with oracle backend (Vedmak)
A......... [ZBX-5693] fixed possibility to create graph with the same name as existing graph prototype within template (Toms)
A......... [ZBX-5698] fixed API response after "triggerprototype.create", now request return "triggerids" after INSERT (Oleg)
A.F....... [ZBX-5648] fixed problems with "templateid" in API. Added check for "templateid" in graphs, triggers, items, screens and template screens. Fixed full clone. Fixed screen forms. Fixed messages in API. (Oleg)
..F....... [ZBX-5679] fixed icon mapping icon preview in configoration form (Vedmak)
..F....... [ZBX-5137] fixed host/group dropdowns change selected value on refresh after page actions (Vedmak)
..F....... [ZBX-5688] fixed trigger expression suffix support for graph triggers, only KMG were supported (Vedmak)
..F....... [ZBX-5665] fixed lld created triggers are not deleted when related trigger prototype is deleted (Vedmak)
...G...... [ZBX-5661] fixed keys "vfs.dev.read" and "vfs.dev.write" with "ops" and "sps" parameters on Linux and FreeBSD (Andris)
...G...... [ZBX-5614] fixed agent compiling problem on OpenBSD 5.1 (Andris)
........S. [ZBX-5674] fixed execution of actions with SSH commands with "Public key" autentication (Sasha)
A......... [ZBX-5656] fixed timeperiod validation (Eduard)
..F....... [ZBX-5660] fixed expression constructor exp labels style (Eduard)
..F....... [ZBX-3204] changed generating and reading algorithm for trigger expression condition functions, and fixed English translation (Oleg)
..F....... [ZBX-5677] fixed param field 3 manipulation in trigger popup (Eduard)